--- a/package.json
+++ b/package.json
@@ -17,17 +17,12 @@
     "cy:run": "cypress run"
   },
   "dependencies": {
-    "@aspida/axios": "^1.9.0",
-    "axios": "^0.26.1",
-    "lint-staged": "^12.3.5",
+    "newt-client-js": "^2.0.1",
     "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "recoil": "^0.6.1",
-    "swr": "^1.2.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@next/swc-darwin-arm64": "^11.1.2",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -47,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
     "npm-run-all": "^4.1.5",
     "pathpida": "^0.18.0",
     "postcss": "^8.4.8",
@@ -54,9 +50,5 @@
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
-  },
-  "volta": {
-    "node": "16.14.0",
-    "yarn": "1.22.17"
   }
 }
